--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
 matplotlib==3.9.2
+mypy==1.11.2
+mypy-extensions==1.0.0
 numpy==2.1.0
 packaging==24.1
 pillow==10.4.0
@@ -16,3 +18,5 @@ python-dateutil==2.9.0.post0
 referencing==0.35.1
 rpds-py==0.20.0
 six==1.16.0
+types-jsonschema==4.23.0.20240813
+typing_extensions==4.12.2
